feat: 🎸 Добавил разметку, стилизацию

--- a/src/scss/global/fonts.scss
+++ b/src/scss/global/fonts.scss
@@ -1,3 +1,6 @@
 @use "../mixins";
 
 @include mixins.font-face(Arial, normal, 400);
+@include mixins.font-face(Inter, normal, 400);
+@include mixins.font-face(Inter, normal, 500);
+@include mixins.font-face(Inter, normal, 600);
