--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,8 +1,9 @@
 :root {
 	// Цвета
+	--color-geebung: #cc7d1a;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
 	// Шрифты
-	--font-family-default: "Arial", system-ui, sans-serif;
+	--font-family-default: "Inter", system-ui, sans-serif;
 }
