--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 //Для разработки
 @use 'global/variables';
+@use 'node_modules/swiper/swiper-bundle.min.css';
 
 //Миксины
 @use 'mixins/font-face';
@@ -22,3 +23,5 @@
 @use 'blocks/page-header';
 @use 'blocks/page-content';
 @use 'blocks/page-footer';
+@use 'blocks/main-nav';
+@use 'blocks/heading';
