--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -1,3 +1,12 @@
 .page-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 175px;
+  
   flex-shrink: 0;
+
+  z-index: 10;
 }
