--- a/src/scss/global/scaffolding.scss
+++ b/src/scss/global/scaffolding.scss
@@ -2,6 +2,10 @@
 
 html {
 	box-sizing: border-box;
+
+	scroll-behavior: smooth;
+
+	-webkit-tap-highlight-color: transparent;
 }
 
 *,:after,:before {
@@ -9,11 +13,15 @@ html {
 }
 
 body {
+	position: relative;
+
 	display: flex;
 	flex-direction: column;
 
   width: 100%;
   min-height: 100vh;
+
+	font-family: var(--font-family-default);
 
   margin: 0;
 }
