feat: 🎸 Добавил разметку, стилизацию

--- a/src/scss/blocks/heading.scss
+++ b/src/scss/blocks/heading.scss
@@ -1,6 +1,8 @@
 @use "../mixins";
 
 .heading {
+  position: relative;
+
   &__slider-item {
     position: relative;
 
@@ -25,7 +27,39 @@
     width: 100%;
     height: 920px;
     object-fit: cover;
+    user-select: none;
 
     z-index: 1;
+  }
+
+  &__info {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+
+    z-index: 3;
+  }
+
+  &__info h1 {
+    font-weight: 400;
+    font-size: 44px;
+    line-height: 57px;
+    color: var(--color-white);
+
+    margin: 0 0 140px 0;
+  }
+
+  &__info-button {
+    width: 280px;
+
+    margin: 0 0 55px 0;
   }
 }
