--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,6 +1,9 @@
 :root {
 	// Цвета
 	--color-geebung: #cc7d1a;
+	--color-raw-umber: #825011;
+	--color-dorado: #5F5753;
+	--color-domino: #9C8364;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
