--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,3 +25,5 @@
 @use 'blocks/page-footer';
 @use 'blocks/main-nav';
 @use 'blocks/heading';
+@use 'blocks/order-button';
+@use 'blocks/move-button';
