--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,6 +4,7 @@
 	--color-raw-umber: #825011;
 	--color-dorado: #5F5753;
 	--color-domino: #9C8364;
+	--color-asphalt: #1b100a;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
