--- a/src/scss/blocks/move-button.scss
+++ b/src/scss/blocks/move-button.scss
@@ -7,8 +7,30 @@
 
   width: 46px;
   height: 135px;
-  background: rgb(156, 131, 100, 0.3);
+  background-color: rgb(156, 131, 100, 0.3);
   border: 1px solid var(--color-dorado);
   border-radius: 25px;
-  opacity: 0.3;
+  cursor: pointer;
+  user-select: none;
+
+  transition: 0.3s;
+
+  @include mixins.respond-to(tablet) {
+    &:hover {
+      background-color: var(--color-domino);
+
+      transition: all 0.3s;
+    }
+  }
+
+  &:active {
+    background-color: var(--color-white);
+   
+    transition: all 0.1s;
+  }
+
+  &__arrow-icon {
+    fill: var(--color-geebung);
+    color: var(--color-geebung);
+  }
 }
