--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -1,12 +1,22 @@
+@use "../mixins";
+
 .page-header {
   position: absolute;
   top: 0;
   left: 0;
 
   width: 100%;
-  height: 175px;
+  height: 225px;
   
   flex-shrink: 0;
 
   z-index: 10;
+
+  @include mixins.respond-to(mobileOnly) {
+    height: 115px;
+  }
+
+  @include mixins.respond-to(tabletOnly) {
+    height: 115px;
+  }
 }
