--- a/src/scss/blocks/heading.scss
+++ b/src/scss/blocks/heading.scss
@@ -117,3 +117,18 @@
     }
   }
 }
+
+.swiper-slide-active .heading__slider-img {
+  animation: img_zoom_out 5s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes img_zoom_out {
+  0% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
