feat: 🎸 Добавил разметку, стилизацию

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -2,9 +2,10 @@
 	// Цвета
 	--color-geebung: #cc7d1a;
 	--color-raw-umber: #825011;
-	--color-dorado: #5F5753;
-	--color-domino: #9C8364;
+	--color-dorado: #5f5753;
+	--color-domino: #9c8364;
 	--color-asphalt: #1b100a;
+	--color-mercury: #e6e6e6;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
