--- a/src/scss/blocks/order-button.scss
+++ b/src/scss/blocks/order-button.scss
@@ -3,6 +3,8 @@
 .order-button {
   position: relative;
 
+  display: block;
+
   height: 55px;
   background: var(--color-geebung);
   overflow: hidden;
