--- a/src/scss/blocks/order-button.scss
+++ b/src/scss/blocks/order-button.scss
@@ -3,7 +3,9 @@
 .order-button {
   position: relative;
 
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   height: 55px;
   background: var(--color-geebung);
@@ -77,6 +79,7 @@
   }
 
   &__text {
+    font-family: var(--font-family-default);
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;    
