feat: 🎸 Добавил разметку, стилизацию

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -6,6 +6,10 @@
 	--color-domino: #9c8364;
 	--color-asphalt: #1b100a;
 	--color-mercury: #e6e6e6;
+	--color-merino: #f4ece0;
+	--color-tea: #c3bcb3;
+	--color-westar: #dbd8d1;
+	--color-dorado: #5f5753;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
