--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 //Для разработки
 @use 'global/variables';
 @use 'node_modules/swiper/swiper-bundle.min.css';
+@use 'node_modules/aos/dist/aos.css';
 
 //Миксины
 @use 'mixins/font-face';
@@ -29,3 +30,5 @@
 @use 'blocks/main-nav';
 @use 'blocks/heading';
 @use 'blocks/about';
+@use 'blocks/food-slider';
+@use 'blocks/modal';
