--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -10,6 +10,7 @@
 	--color-tea: #c3bcb3;
 	--color-westar: #dbd8d1;
 	--color-dorado: #5f5753;
+	--color-pampas: #ebe6e0;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
