--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -2,12 +2,12 @@
 
 .modal {
   position: fixed;
-  top: 0;
-  left: 0;
+
+  display: flex;
 
   width: 100vw;
   height: 100vh;
-  background-color: rgb(0, 0, 0, 0.9);
+  background-color: rgb(0, 0, 0, 0.95);
   opacity: 0;
   visibility: hidden;
   overflow: auto;
@@ -15,6 +15,8 @@
   overscroll-behavior-y: contain;
 
   transition: 0.3s;
+
+  padding: 10px 0 10px 0;
 
   z-index: 100;
 
@@ -31,19 +33,172 @@
     align-items: center;
     justify-content: center;
 
+    max-width: 350px;
+    border-radius: 20px;
+
+    margin: auto;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 90%;
+    }
+  }
+
+  &__close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+
+    transition: 0.1s;
+
+    &:hover .modal__close-inner::before {
+      background-color: var(--color-geebung);
+
+      transition: all 0.1s;
+    }
+
+    &:hover .modal__close-inner::after {
+      background-color: var(--color-geebung);
+
+      transition: all 0.1s;
+    }
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 1px;
+
+      transition: all 0.1s;
+    }
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 10px;
+      height: 10px;
+    }
+  }
+
+  &__close-inner {
+    position: relative;
+
     width: 100%;
     height: 100%;
+    vertical-align: top;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 45%;
+      left: 0;
+      transform: translateY(-45%) rotate(45deg);
+
+      width: 100%;
+      height: 3px;
+      background-color: var(--color-black);
+      border-radius: 5px;
+
+      transition: 0.1s;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 45%;
+      left: 0;
+      transform: translateY(-45%) rotate(-45deg);
+
+      width: 100%;
+      height: 3px;
+      background-color: var(--color-black);
+      border-radius: 5px;
+
+      transition: 0.1s;
+    }
   }
 
   &__inner {
-    width: 230px;
-    height: 470px;
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     background-color: var(--color-white);
     border-radius: 20px;
+
+    padding: 40px 50px 85px 50px;
+
+    @include mixins.respond-to(mobileOnly) {
+      padding: 30px;
+    }
+  }
+
+  &__inner-image {
+    user-select: none;
+
+    margin: 0 0 25px 0;
   }
 
   &__inner-img {
     vertical-align: top;
+  }
+
+  &__inner-title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--color-asphalt);
+
+    margin: 0 0 20px 0;
+  }
+
+  &__inner-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &__inner-label {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 0 20px 0;
+
+    &:last-of-type {
+      margin: 0 0 25px 0;
+    }
+  }
+
+  &__inner-desc {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--color-dorado);
+
+    margin: 0 0 5px 0;
+  }
+
+  &__inner-input {
+    width: 230px;
+    height: 40px;
+    background-color: var(--color-pampas);
+    border: none;
+    box-shadow: none;
+    border-radius: 10px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: var(--color-asphalt);
+
+    transition: 0.1s;
+
+    padding: 12px 15px;
   }
 
   &__submit-button {
@@ -52,5 +207,9 @@
 
   & .order-button {
     height: 40px;
+  }
+
+  &__success {
+    display: none;
   }
 }
