feat: 🎸 Добавил разметку, стилизацию, адаптив

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -11,6 +11,7 @@
 	--color-westar: #dbd8d1;
 	--color-dorado: #5f5753;
 	--color-pampas: #ebe6e0;
+	--color-gallery: #eaeaea;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
