--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -65,9 +65,8 @@
     min-height: inherit;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
-    overflow: hidden;
 
-    padding: 75px 190px 70px 130px;
+    padding: 75px 190px 60px 130px;
 
     @include mixins.respond-to(mobileOnly) {
       padding: 10px;
@@ -91,15 +90,31 @@
     }
 
     @include mixins.respond-to(tabletOnly) {
-      align-self: center;
-
-      text-align: center;
-
       margin: 0 0 20px 0;
     }
   }
 
-  &__subject-inner p {
+  &__subject-text {
+    overflow-y: auto;
+
+    padding: 0 20px 0 0;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      border-radius: 20px;
+      background: var(--color-dorado);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 20px;
+      background: var(--color-domino);
+    }
+  }
+
+  &__subject-text p {
     font-weight: 400;
     font-size: 18px;
     line-height: 180%;
@@ -169,7 +184,6 @@
     min-height: inherit;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
-    overflow: hidden;
 
     padding: 75px 190px 70px 130px;
 
@@ -191,10 +205,6 @@
     margin: 0 0 40px 0;
 
     @include mixins.respond-to(mobileOnly) {
-      align-self: center;
-
-      text-align: center;
-
       margin: 0 0 20px 0;
     }
 
@@ -203,7 +213,27 @@
     }
   }
 
-  &__menu-inner p {
+  &__menu-text {
+    overflow-y: auto;
+
+    padding: 0 20px 0 0;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      border-radius: 20px;
+      background: var(--color-dorado);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 20px;
+      background: var(--color-domino);
+    }
+  }
+
+  &__menu-text p {
     font-weight: 400;
     font-size: 18px;
     line-height: 180%;
