--- a/src/scss/blocks/food-slider.scss
+++ b/src/scss/blocks/food-slider.scss
@@ -9,8 +9,6 @@
 
     display: flex;
     flex-direction: column;
-
-    width: 100%;
   }
 
   &__slider-button {
@@ -32,6 +30,13 @@
 
     z-index: 10;
 
+    @include mixins.respond-to(mobileOnly) {
+      width: 26px;
+      height: 26px;
+
+      border: 1px solid var(--color-dorado);
+    }
+
     &:hover {
       background-color: var(--color-tea);
 
@@ -39,7 +44,7 @@
     }
   }
 
-  &__slider-button--left {
+  &__slider-button-prev {
     left: 0;
   }
 
@@ -47,6 +52,13 @@
     right: 0;
 
     transform: translateY(-50%) rotate(180deg);
+  }
+
+  &__arrow-icon {
+    @include mixins.respond-to(mobileOnly) {
+      width: 9px;
+      height: 5px;
+    }
   }
 
   &__slider {
@@ -59,8 +71,12 @@
     flex-direction: column;
 
     width: 100%;
-    height: 645px !important;
+    height: 645px;
     user-select: none;
+
+    @include mixins.respond-to(mobileOnly) {
+      height: 290px;
+    }
   }
 
   &__slider-img {
@@ -69,6 +85,11 @@
     object-fit: cover;
     vertical-align: top;
     user-select: none;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 290px;
+      height: 290px;
+    }
   }
 
   &__move-button {
@@ -84,6 +105,14 @@
   bottom: 70px;
 
   width: fit-content;
+
+  @include mixins.respond-to(mobileOnly) {
+    display: none;
+  }
+
+  @include mixins.respond-to(tabletOnly) {
+    display: none;
+  }
 }
 
 .food-slider .swiper-pagination-bullet {
