feat: 🎸 Добавил стилизацию, разметку, адаптив

--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -65,6 +65,7 @@
     min-height: inherit;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
+    overflow: hidden;
 
     padding: 75px 190px 60px 130px;
 
@@ -184,6 +185,7 @@
     min-height: inherit;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
+    overflow: hidden;
 
     padding: 75px 190px 70px 130px;
 
