--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -12,6 +12,8 @@
 	--color-dorado: #5f5753;
 	--color-pampas: #ebe6e0;
 	--color-gallery: #eaeaea;
+	--color-cod-gray: #1c1c1c; 
+	--color-loblolly: #b8c2c9;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
