--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -14,6 +14,7 @@
 	--color-gallery: #eaeaea;
 	--color-cod-gray: #1c1c1c; 
 	--color-loblolly: #b8c2c9;
+	--color-gray: #878282;
 	--color-white: #ffffff;
 	--color-black: #000000;
 
