--- a/src/components/base-blocks/_base-head.html
+++ b/src/components/base-blocks/_base-head.html
@@ -8,10 +8,13 @@
 	<meta name="format-detection" content="email=no">
 	<meta name="theme-color" content="@@theme-color">
 
-	<link rel="icon" href="./img/favicon/favicon.ico" sizes="any">
-	<link rel="icon" href="./img/favicon/favicon.svg" type="image/svg+xml">
-	<link rel="apple-touch-icon" href="./img/favicon/favicon_180.png">
-	<link rel="manifest" href="./manifest.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="./site.webmanifest">
+	<link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#000000">
+	<meta name="msapplication-TileColor" content="#da532c">
+
 	<link href="./css/style.min.css" rel="stylesheet">
 	<title>@@title</title>
 </head>
