--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -23,11 +23,14 @@
     left: 0;
 
     width: 450px;
-    height: 540px;
+    height: 560px;
     background-color: var(--color-asphalt);
     border: 1px solid var(--color-gallery);
     border-radius: 20px;
     box-shadow: 0px 16px 51px rgba(0, 0, 0, 0.11);
+    scroll-margin-top: 20px;
+
+    transition: 0.3s;
 
     padding: 20px;
 
@@ -43,19 +46,75 @@
     }
   }
 
+  &__info--right {
+    left: auto;
+    right: 0;
+
+    transition: all 0.3s;
+  }
+
   &__info-inner {
+    position: relative;
+
     width: 100%;
     height: 100%;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
 
-    color: white;
+    padding: 55px 70px 35px 60px;
+  }
+  
+  &__info-move {
+    position: absolute;
+    top: 7px;
+    right: 7px;
 
-    padding: 55px 75px 35px 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 50px;
+    height: 50px;
+    border: 1px solid var(--color-dorado);
+    border-radius: 50%;
+    background-color: var(--color-asphalt);
+    cursor: pointer;
+
+    transition: 0.1s;
+
+    &:hover {
+      background-color: var(--color-dorado);
+
+      transition: all 0.1s;
+    }
+
+    &:hover .contacts__arrow-icon {
+      fill: var(--color-black);
+
+      transition: all 0.1s;
+    }
 
     @include mixins.respond-to(mobileOnly) {
-      padding: 10px;
+      display: none;
     }
+
+    @include mixins.respond-to(tabletOnly) {
+      display: none;
+    }
+  }
+
+  &__info-move--right .contacts__arrow-icon {
+    transform: rotate(90deg);
+
+    transition: all 0.1s;
+  }
+
+  &__arrow-icon {
+    fill: var(--color-geebung);
+    
+    transform: rotate(-90deg);
+
+    transition: all 0.1s;
   }
 
   &__info-title {
@@ -135,10 +194,50 @@
   }
 
   &__info-link {
+    position: relative;
+
+    display: inline-block;
+
+    overflow: hidden;
+
     font-weight: 600;
     font-size: 16px;
     line-height: 19px;
     color: var(--color-mercury);
+
+    padding: 0 0 5px 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: -100%;
+      bottom: 0;
+
+      width: 100%;
+      height: 2px;
+      background-color: var(--color-geebung);
+
+      transition: 0.3s;
+    }
+
+    &:hover::before {
+      left: 0;
+
+      transition: all 0.3s;
+    }
+
+    &:active {
+      color: var(--color-geebung);
+
+      transition: all 0.1s;
+    }
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
   }
 
   &__info-text {
@@ -152,35 +251,78 @@
     display: flex;
     flex-direction: column;
 
-    margin: 0 0 40px 0;
+    margin: 0 0 20px 0;
   }
 
   &__links-opentable {
+    position: relative;
+
+    display: inline-block;
+
+    width: fit-content;
+    overflow: hidden;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     color: var(--color-mercury);
 
+    padding-bottom: 5px;
     margin: 0 0 20px 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: -100%;
+      bottom: 0;
+
+      width: 100%;
+      height: 2px;
+      background-color: var(--color-geebung);
+
+      transition: 0.3s;
+    }
+
+    &:hover::before {
+      left: 0;
+
+      transition: all 0.3s;
+    }
+
+    &:active {
+      color: var(--color-geebung);
+
+      transition: all 0.1s;
+    }
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
   }
 
   &__links-list {
     display: flex;
+    flex-wrap: wrap;
+
+    max-width: 270px;
   }
 
   &__links-item {
     border-radius: 3px;
-    margin: 0 20px 0 0;
 
     transition: 0.1s;
-    
+    margin: 0 20px 20px 0;
+
+    &:last-of-type {
+      margin: 0 0 20px 0;
+    }
+
     &:hover {
       transform: scale(1.2);
       transition: all 0.1s;
-    }
-
-    &:last-of-type {
-      margin: 0;
     }
   }
 
@@ -189,6 +331,13 @@
 
     width: 30px;
     height: 30px;
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
   }
 
   &__map {
