--- a/src/scss/blocks/page-footer.scss
+++ b/src/scss/blocks/page-footer.scss
@@ -13,7 +13,38 @@
     padding: 20px 0 20px 0;
   }
 
+  &__underline-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-decoration-line: underline;
+    color: var(--color-gray);
+
+    transition: 0.3s;
+
+    &:hover {
+      color: var(--color-geebung);
+
+      transition: all 0.3s;
+    }
+  }
+
   &__underline-madeby {
+
+    &-text {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: var(--color-gray);
+
+      margin: 0 5px 0 0;
+    }
+
+    &:hover .page-footer__underline-madeby-text {
+      color: var(--color-geebung);
+
+      transition: all 0.3s;
+    }
 
   }
 
