--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -266,6 +266,8 @@
     @include mixins.respond-to(mobileOnly) {
       flex-direction: column;
 
+      width: 100%;
+
       margin: 50px 0 0 0;
     }
 
@@ -284,7 +286,8 @@
     }
 
     @include mixins.respond-to(mobileOnly) {
-      margin: 0 0 20px 0;
+      width: 100%;
+      margin: 0 0 30px 0;
 
       &:last-child {
         margin: 0;
