--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -15,24 +15,31 @@
     @include mixins.respond-to(mobileOnly) {
       flex-direction: column;
     }
+
+    @include mixins.respond-to(tabletOnly) {
+      flex-direction: column;
+    }
+
+    @include mixins.respond-to(desktopS) {
+      flex-direction: column;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      flex-direction: row;
+    }
   }
 
   &__info {
-    position: absolute;
-    top: 50px;
-    left: 0;
-
-    width: 450px;
-    height: 560px;
     background-color: var(--color-asphalt);
     border: 1px solid var(--color-gallery);
     border-radius: 20px;
     box-shadow: 0px 16px 51px rgba(0, 0, 0, 0.11);
     scroll-margin-top: 20px;
+    overflow: hidden;
 
     transition: 0.3s;
 
-    padding: 20px;
+    z-index: 2;
 
     @include mixins.respond-to(mobileOnly) {
       position: relative;
@@ -43,6 +50,46 @@
       height: auto;
 
       padding: 10px;
+      margin: 0 0 40px 0;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      position: relative;
+      top: auto;
+      left: auto;
+
+      width: 100%;
+      height: auto;
+
+      padding: 10px;
+      margin: 0 0 40px 0;
+    }
+
+    @include mixins.respond-to(desktopS) {
+      position: relative;
+      top: auto;
+      left: auto;
+
+      width: 100%;
+      height: auto;
+
+      padding: 10px;
+      margin: 0 0 40px 0;
+
+      z-index: 1;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      position: absolute;
+      top: 50px;
+      left: 0;
+  
+      width: 450px;
+      height: 560px;
+
+      padding: 20px;
+
+      z-index: 2;
     }
   }
 
@@ -56,12 +103,30 @@
   &__info-inner {
     position: relative;
 
-    width: 100%;
-    height: 100%;
     border: 1px solid var(--color-domino);
     border-radius: 20px;
 
-    padding: 55px 70px 35px 60px;
+    @include mixins.respond-to(mobileOnly) {
+      padding: 10px;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      padding: 10px;
+    }
+
+    @include mixins.respond-to(desktopS) {
+      max-width: 280px;
+
+      padding: 10px;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      width: 100%;
+      max-width: 100%;
+      height: 100%;
+
+      padding: 55px 70px 35px 60px;
+    }
   }
   
   &__info-move {
@@ -94,12 +159,26 @@
       transition: all 0.1s;
     }
 
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+
+      transition: all 0.1s;
+    }
+
     @include mixins.respond-to(mobileOnly) {
       display: none;
     }
 
     @include mixins.respond-to(tabletOnly) {
       display: none;
+    }
+
+    @include mixins.respond-to(desktopS) {
+      display: none;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      display: block;
     }
   }
 
@@ -345,12 +424,46 @@
     height: 550px;
     border-radius: 20px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
+
+    z-index: 1;
+
+    @include mixins.respond-to(desktopS) {
+      position: absolute;
+      top: 60px;
+      right: 10px;
+
+      width: 500px;
+      height: 450px;
+
+      z-index: 2;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      position: relative;
+      top: auto;
+      right: auto;
+
+      width: 100%;
+      height: 550px;
+
+      z-index: 1;
+    }
   }
 
   &__map-inner {
     width: 100%;
     height: 550px;
     border-radius: 20px;
+
+    @include mixins.respond-to(desktopS) {
+      width: 500px;
+      height: 450px;
+    }
+
+    @include mixins.respond-to(desktopD) {
+      width: 100%;
+      height: 550px;
+    }
   }
 
   &__order-button {
