--- a/src/scss/blocks/footer-main.scss
+++ b/src/scss/blocks/footer-main.scss
@@ -11,11 +11,32 @@
 
     @include mixins.respond-to(mobileOnly) {
       flex-direction: column;
+      align-items: flex-start;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 
   &__logo-block {
     margin: 0 165px 0 0;
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
+
+    @include mixins.respond-to(mobileOnly) {
+      margin: 0 0 50px 0;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      margin: 0 0 50px 0;
+    }
   }
 
   &__logo-img {
@@ -30,6 +51,16 @@
     justify-content: space-between;
 
     width: 100%;
+
+    @include mixins.respond-to(mobileOnly) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__nav-item {
@@ -40,7 +71,19 @@
     }
 
     @include mixins.respond-to(mobileOnly) {
+      margin: 0 0 30px 0;
+      
+      &:last-of-type {
+        margin: 0;
+      }
+    }
 
+    @include mixins.respond-to(tabletOnly) {
+      margin: 0 0 30px 0;
+      
+      &:last-of-type {
+        margin: 0;
+      }
     }
   }
 
