--- a/src/scss/blocks/page-footer.scss
+++ b/src/scss/blocks/page-footer.scss
@@ -11,6 +11,16 @@
     justify-content: space-between;
 
     padding: 20px 0 20px 0;
+
+    @include mixins.respond-to(mobileOnly) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__underline-link {
@@ -27,6 +37,21 @@
 
       transition: all 0.3s;
     }
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
+
+    @include mixins.respond-to(mobileOnly) {
+      margin: 0 0 30px 0;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      margin: 0 0 30px 0;
+    }
   }
 
   &__underline-madeby {
@@ -40,15 +65,29 @@
       margin: 0 5px 0 0;
     }
 
+    &-icon {
+      background-color: var(--color-dorado);
+  
+      transition: all 0.3s;
+    }
+
     &:hover .page-footer__underline-madeby-text {
       color: var(--color-geebung);
 
       transition: all 0.3s;
     }
 
-  }
+    &:hover .page-footer__underline-madeby-icon {
+      background-color: var(--color-geebung);
 
-  &__underline-madeby-icon {
-    background-color: var(--color-dorado);
+      transition: all 0.3s;
+    }
+
+    &:focus-visible {
+      outline: 3px solid var(--color-geebung);
+      outline-offset: 5px;
+
+      transition: all 0.1s;
+    }
   }
  }
