--- a/src/scss/blocks/page-footer.scss
+++ b/src/scss/blocks/page-footer.scss
@@ -8,6 +8,7 @@
   &__underline-container {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     justify-content: space-between;
 
     padding: 20px 0 20px 0;
@@ -22,6 +23,12 @@
       align-items: flex-start;
     }
   }
+
+  @media (min-width: 1800px) {
+    &__underline-container {
+      justify-content: flex-start;
+    }
+  }  
 
   &__underline-link {
     font-weight: 400;
@@ -53,6 +60,26 @@
       margin: 0 0 30px 0;
     }
   }
+
+  @media (min-width: 1800px) {
+    &__underline-link {
+      margin: 0 170px 0 0;
+
+      &:nth-child(2) {
+        margin: 0 225px 0 0;
+      }
+  
+      &:last-of-type {
+        margin: 0;
+      }
+    }
+  }
+
+  // @media only screen
+  // and (min-device-width: 320px)
+  // and (max-device-width: 480px) {
+
+  // }
 
   &__underline-madeby {
 
