--- a/src/scss/blocks/footer-main.scss
+++ b/src/scss/blocks/footer-main.scss
@@ -70,13 +70,13 @@
     }
   }
 
-  &__nav-item {
-    margin: 0 190px 0 0;
-
-    &:last-of-type {
-      margin: 0;
+  @media (min-width: 1800px) {
+    &__nav-list {
+      justify-content: flex-start;
     }
+  } 
 
+  &__nav-item {
     @include mixins.respond-to(mobileOnly) {
       margin: 0 0 30px 0;
       
@@ -88,6 +88,16 @@
     @include mixins.respond-to(tabletOnly) {
       margin: 0 0 30px 0;
       
+      &:last-of-type {
+        margin: 0;
+      }
+    }
+  }
+
+  @media (min-width: 1800px) {
+    &__nav-item {
+      margin: 0 190px 0 0;
+
       &:last-of-type {
         margin: 0;
       }
@@ -146,7 +156,7 @@
     @include mixins.respond-to(desktopS) {
       font-size: 20px;
     }
-    
+
     @include mixins.respond-to(desktopD) {
       font-size: 22px;
     }
