--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -278,17 +278,14 @@
     }
   }
 
-  &__menu-link {
-    width: 250px;
-
+  &__menu-links li {
     margin: 0 40px 0 0;
 
-    &:last-child {
+    &:last-of-type {
       margin: 0;
     }
 
     @include mixins.respond-to(mobileOnly) {
-      width: 100%;
       margin: 0 0 30px 0;
 
       &:last-child {
@@ -302,6 +299,14 @@
       &:last-child {
         margin: 0;
       }
+    }
+  }
+
+  &__menu-link {
+    width: 250px;
+
+    @include mixins.respond-to(mobileOnly) {
+      width: 100%;
     }
   }
 }
