--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -21,11 +21,8 @@
     }
 
     @include mixins.respond-to(desktopS) {
-      flex-direction: column;
-    }
-
-    @include mixins.respond-to(desktopD) {
-      flex-direction: row;
+      align-items: stretch;
+      justify-content: space-between;
     }
   }
 
@@ -70,12 +67,12 @@
       top: auto;
       left: auto;
 
-      width: 100%;
+      width: 450px;
       height: auto;
 
       padding: 10px;
-      margin: 0 0 40px 0;
-
+      margin: 0 20px 0 0;
+      
       z-index: 1;
     }
 
@@ -88,6 +85,7 @@
       height: 560px;
 
       padding: 20px;
+      margin: 0;
 
       z-index: 2;
     }
@@ -116,6 +114,7 @@
 
     @include mixins.respond-to(desktopS) {
       max-width: 280px;
+      height: 100%;
 
       padding: 10px;
     }
@@ -134,7 +133,7 @@
     top: 7px;
     right: 7px;
 
-    display: flex;
+    display: none; //Скрыто
     align-items: center;
     justify-content: center;
 
@@ -178,7 +177,7 @@
     }
 
     @include mixins.respond-to(desktopD) {
-      display: flex;
+      display: none;
     }
   }
 
@@ -428,25 +427,8 @@
     z-index: 1;
 
     @include mixins.respond-to(desktopS) {
-      position: absolute;
-      top: 60px;
-      right: 10px;
-
-      width: 500px;
-      height: 450px;
-
-      z-index: 2;
-    }
-
-    @include mixins.respond-to(desktopD) {
-      position: relative;
-      top: auto;
-      right: auto;
-
       width: 100%;
       height: 550px;
-
-      z-index: 1;
     }
   }
 
@@ -456,11 +438,6 @@
     border-radius: 20px;
 
     @include mixins.respond-to(desktopS) {
-      width: 500px;
-      height: 450px;
-    }
-
-    @include mixins.respond-to(desktopD) {
       width: 100%;
       height: 550px;
     }
