--- a/src/scss/blocks/footer-main.scss
+++ b/src/scss/blocks/footer-main.scss
@@ -122,7 +122,7 @@
     font-feature-settings: 'pnum' on, 'lnum' on;
     color: var(--color-white);
 
-    transition: 0.1s;
+    transition: 0.3s;
 
     z-index: 2;
 
@@ -145,6 +145,18 @@
       left: 0;
 
       transition: all 0.3s;
+    }
+
+    &:active::before {
+      background-color: var(--color-white);
+
+      transition: all 0.1s;
+    }
+
+    &:active {
+      color: var(--color-black);
+
+      transition: all 0.1s;
     }
 
     &:focus-visible {
