--- a/src/scss/global/scaffolding.scss
+++ b/src/scss/global/scaffolding.scss
@@ -3,7 +3,7 @@
 html {
 	box-sizing: border-box;
 
-	scroll-behavior: smooth;
+	// scroll-behavior: smooth;
 
 	-webkit-tap-highlight-color: transparent;
 }
