--- a/src/scss/blocks/page-footer.scss
+++ b/src/scss/blocks/page-footer.scss
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    justify-content: space-between;
+    justify-content: center;
 
     padding: 20px 0 20px 0;
 
@@ -21,12 +21,6 @@
     @include mixins.respond-to(tabletOnly) {
       flex-direction: column;
       align-items: flex-start;
-    }
-  }
-
-  @media (min-width: 1800px) {
-    &__underline-container {
-      justify-content: flex-start;
     }
   }  
 
