--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -53,9 +53,27 @@
 
     @include mixins.respond-to(desktopD) {
       width: 1100px;
-      height: 640px;
+      min-height: 640px;
 
       padding: 30px;
+    }
+
+    &--2 {
+      @include mixins.respond-to(mobileOnly) {
+        margin: 60px 0 30px 0;
+      }
+  
+      @include mixins.respond-to(tabletOnly) {
+        margin: 60px 0 30px 0;
+      }
+  
+      @include mixins.respond-to(desktopS) {
+        margin: 60px 0 30px 0;
+      }
+  
+      @include mixins.respond-to(desktopD) {
+        margin: 120px 0 30px 0;
+      }
     }
   }
 
@@ -73,7 +91,7 @@
     padding: 75px 190px 60px 130px;
 
     @include mixins.respond-to(mobileOnly) {
-      padding: 10px;
+      padding: 20px;
     }
 
     @include mixins.respond-to(tabletOnly) {
@@ -99,8 +117,6 @@
   }
 
   &__subject-text {
-    overflow-y: auto;
-
     padding: 0 20px 0 0;
 
     &::-webkit-scrollbar {
@@ -136,6 +152,62 @@
 
     @include mixins.respond-to(tabletOnly) {
       font-size: 16px;
+    }
+  }
+
+  &__subject-text p strong {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 39px;
+    color: var(--color-domino);
+  }
+
+  &__subject-text ul {
+    display: flex;
+    flex-direction: column;
+
+    list-style: none;
+
+    padding: 0;
+    margin: 20px 0 0 0;
+  }
+
+  &__subject-text li {
+    position: relative;
+
+    display: inline-block;
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 180%;
+    color: var(--color-mercury);
+
+    padding: 0 0 0 20px;
+    margin: 0 0 20px 0;
+
+    &:last-of-type {
+      margin: 0;
+    }
+
+    @include mixins.respond-to(mobileOnly) {
+      font-size: 16px;
+    }
+
+    @include mixins.respond-to(tabletOnly) {
+      font-size: 16px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+
+      width: 10px;
+      height: 10px;
+      background-color: var(--color-geebung);
+      border-radius: 50%;
     }
   }
 
@@ -193,7 +265,7 @@
     padding: 105px 190px 70px 130px;
 
     @include mixins.respond-to(mobileOnly) {
-      padding: 10px;
+      padding: 20px;
     }
 
     @include mixins.respond-to(tabletOnly) {
